--- a/app/index.tmpl.html
+++ b/app/index.tmpl.html
@@ -1,11 +1,67 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <title>唯众融合物联云平台</title>
-  </head>
-  <body>
-    <div id='root'>
+
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <title>唯众融合物联云平台</title>
+</head>
+
+<body>
+  <div class="bg">
+  </div>
+  <div class="box">
+    <div class="line1">
+      <div class="flex-box">
+        <div class="item item-25">
+          <div class="rect center font-color" style="font-size: 22px;">
+            唯众融合物联云平台
+          </div>
+        </div>
+        <div class="item item-50">
+          <div class="rect space-around">
+            <div>
+              <div style="color: darkorchid; text-align: center;">1356</div>
+              <div class="font-color">地区数量</div>
+            </div>
+            <div>
+              <div style="color: darkorange; text-align: center;">1356</div>
+              <div class="font-color">学校数量</div>
+            </div>
+            <div>
+              <div style="color: darkkhaki; text-align: center;">1356</div>
+              <div class="font-color">传感器数量</div>
+            </div>
+            <div>
+              <div style="color: cornflowerblue; text-align: center;">1356</div>
+              <div class="font-color">网关总数</div>
+            </div>
+          </div>
+        </div>
+        <div class="item item-25">
+          <div class="rect center font-color">
+            2018-06-25 10:52
+          </div>
+        </div>
+      </div>
     </div>
-  </body>
+    <div class="line2">
+      <div class="flex-box">
+        <div class="item item-25">
+          <div id="gateway" class="rect"></div>
+        </div>
+        <div class="item item-50"></div>
+        <div class="item item-25"></div>
+      </div>
+    </div>
+    <div class="line3">
+      <div class="flex-box">
+        <div class="item item-25"></div>
+        <div class="item item-50"></div>
+        <div class="item item-25"></div>
+      </div>
+    </div>
+  </div>
+</body>
+
 </html>
