代码更新，加入地图
Signed-off-by: KellenHe <103658437@qq.com>

--- a/app/index.tmpl.html
+++ b/app/index.tmpl.html
@@ -50,7 +50,9 @@
         <div class="item item-25">
           <div id="gateway" class="rect"></div>
         </div>
-        <div class="item item-50"></div>
+        <div class="item item-50">
+          <div id="map" class="rect"></div>
+        </div>
         <div class="item item-25"></div>
       </div>
     </div>
