--- a/app/index.tmpl.html
+++ b/app/index.tmpl.html
@@ -53,7 +53,9 @@
         <div class="item item-50">
           <div id="map" class="rect"></div>
         </div>
-        <div class="item item-25"></div>
+        <div class="item item-25">
+          <div id="leida" class="rect"></div>
+        </div>
       </div>
     </div>
     <div class="line3">
@@ -64,6 +66,9 @@
       </div>
     </div>
   </div>
+<script src="//d3js.org/d3.v5.min.js"></script>
+<script src="//d3js.org/queue.v1.min.js"></script>
+<script src="//d3js.org/topojson.v1.min.js"></script>
 </body>
 
 </html>
